Hero cutoff fix?

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 100%;
     min-height: 100lvh;
-    height: 100lvh;
+    /* height: 100lvh; */
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
